--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="F7Su4Ovw5IsGMB1AMCvbc8JGuuwovdCJ5x--7IwHKdU" />
   <title>How Celebrity Net Worth Data Is Researched Today</title>
   <meta name="description" content="A professional, transparent overview of how celebrity net worth is researched today: sources, benchmarks, valuation, ethics, and updates." />
 
@@ -859,4 +860,5 @@
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
+
 </html>
